@@ -1,4 +1,5 @@
 {
+   "scanner_type": "laser",
    "folders" : {
     "www": "/usr/local/fabscanpi/www",
     "scans": "/usr/local/fabscanpi/scans/"
